--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,6 @@
   "background": {
     "scripts": ["background.js"],
     "persistent": true
-  }
+  },
+  "content_security_policy":"script-src 'self' https://apis.google.com https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js https://geolocation-db.com/jsonp 'unsafe-eval'; object-src 'self'"
 }
