--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "default_icon": "icon.png",
     "default_popup": "index.html"
   },
-  "permissions": ["alarms", "activeTab", "https://pomber.github.io/covid19/timeseries.json"],
+  "permissions": ["alarms", "activeTab", "https://api.rootnet.in/covid19-in/stats/latest"],
   "background": {
     "scripts": ["background.js"],
     "persistent": true
